--- a/Copy-of-EcoShield-Windows.html
+++ b/Copy-of-EcoShield-Windows.html
@@ -117,7 +117,7 @@
         });
     </script>
 <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-path-to-root="./" data-include-products="true" class="u-body u-xl-mode" data-lang="en"><header class="u-align-left u-clearfix u-header u-section-row-container" id="sec-41f8"><div class="u-section-rows">
+  <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class="u-align-left u-clearfix u-header u-section-row-container" id="sec-41f8"><div class="u-section-rows">
         <div class="u-custom-color-2 u-section-row u-section-row-1" id="sec-46aa">
           <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
             <nav data-position="" class="u-menu u-menu-one-level u-offcanvas u-menu-1">
@@ -200,14 +200,14 @@
         <h1 class="u-align-center u-text u-text-1">Our Products</h1>
       </div>
     </section>
-    <section class="u-carousel u-slide u-valign-middle-xs u-block-4994-1" id="carousel-7456" data-interval="5000" data-u-ride="carousel">
+    <section class="u-carousel u-slide u-valign-middle-xs u-block-4994-1" id="carousel-d8b0" data-interval="5000" data-u-ride="carousel">
       <ol class="u-absolute-hcenter u-carousel-indicators u-block-4994-6">
-        <li data-u-target="#carousel-7456" class="u-active u-border-2 u-border-grey-75 u-grey-30 u-shape-circle" data-u-slide-to="0" style="width: 14px; height: 14px;"></li>
-        <li data-u-target="#carousel-7456" class="u-border-2 u-border-grey-75 u-grey-30 u-shape-circle" data-u-slide-to="1" style="width: 14px; height: 14px;"></li>
-        <li data-u-target="#carousel-7456" class="u-border-2 u-border-grey-75 u-grey-30 u-shape-circle" data-u-slide-to="2" style="width: 14px; height: 14px;"></li>
-        <li data-u-target="#carousel-7456" class="u-border-2 u-border-grey-75 u-grey-30 u-shape-circle" data-u-slide-to="3" style="width: 14px; height: 14px;"></li>
-        <li data-u-target="#carousel-7456" class="u-border-2 u-border-grey-75 u-grey-30 u-shape-circle" data-u-slide-to="4" style="width: 14px; height: 14px;"></li>
-        <li data-u-target="#carousel-7456" class="u-border-2 u-border-grey-75 u-grey-30 u-shape-circle" data-u-slide-to="5" style="width: 14px; height: 14px;"></li>
+        <li data-u-target="#carousel-d8b0" class="u-active u-border-2 u-border-grey-75 u-grey-30 u-shape-circle" data-u-slide-to="0" style="width: 14px; height: 14px;"></li>
+        <li data-u-target="#carousel-d8b0" class="u-border-2 u-border-grey-75 u-grey-30 u-shape-circle" data-u-slide-to="1" style="width: 14px; height: 14px;"></li>
+        <li data-u-target="#carousel-d8b0" class="u-border-2 u-border-grey-75 u-grey-30 u-shape-circle" data-u-slide-to="2" style="width: 14px; height: 14px;"></li>
+        <li data-u-target="#carousel-d8b0" class="u-border-2 u-border-grey-75 u-grey-30 u-shape-circle" data-u-slide-to="3" style="width: 14px; height: 14px;"></li>
+        <li data-u-target="#carousel-d8b0" class="u-border-2 u-border-grey-75 u-grey-30 u-shape-circle" data-u-slide-to="4" style="width: 14px; height: 14px;"></li>
+        <li data-u-target="#carousel-d8b0" class="u-border-2 u-border-grey-75 u-grey-30 u-shape-circle" data-u-slide-to="5" style="width: 14px; height: 14px;"></li>
       </ol>
       <div class="u-carousel-inner" role="listbox">
         <div class="u-active u-align-center u-carousel-item u-clearfix u-gradient u-section-3-1" src="">
@@ -253,7 +253,7 @@
           </div>
         </div>
       </div>
-      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-icon-rectangle u-text-body-color u-block-4994-7" href="#carousel-7456" role="button" data-u-slide="prev">
+      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-icon-rectangle u-text-body-color u-block-4994-7" href="#carousel-d8b0" role="button" data-u-slide="prev">
         <span aria-hidden="true">
           <svg viewBox="0 0 8 8"><path d="M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z"></path></svg>
         </span>
@@ -261,7 +261,7 @@
           <svg viewBox="0 0 8 8"><path d="M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z"></path></svg>
         </span>
       </a>
-      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-next u-icon-rectangle u-text-body-color u-block-4994-8" href="#carousel-7456" role="button" data-u-slide="next">
+      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-next u-icon-rectangle u-text-body-color u-block-4994-8" href="#carousel-d8b0" role="button" data-u-slide="next">
         <span aria-hidden="true">
           <svg viewBox="0 0 8 8"><path d="M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z"></path></svg>
         </span>
@@ -478,146 +478,7 @@
                 </div>
               </div>
               <div class="u-align-center u-container-style u-layout-cell u-right-cell u-size-30 u-size-xs-60 u-layout-cell-2" src="">
-                <div class="u-container-layout u-valign-middle u-container-layout-2" src="">
-                  <div class="u-carousel u-gallery u-gallery-slider u-layout-carousel u-no-transition u-show-text-always u-gallery-1" id="carousel-2304" data-interval="3000" data-u-ride="carousel">
-                    <ol class="u-absolute-hcenter u-carousel-indicators u-carousel-indicators-1">
-                      <li data-u-target="#carousel-2304" data-u-slide-to="0" class="u-active u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
-                      <li data-u-target="#carousel-2304" data-u-slide-to="1" class="u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
-                      <li data-u-target="#carousel-2304" data-u-slide-to="2" class="u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
-                      <li data-u-target="#carousel-2304" data-u-slide-to="3" class="u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
-                      <li data-u-target="#carousel-2304" data-u-slide-to="4" class="u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
-                      <li data-u-target="#carousel-2304" data-u-slide-to="5" class="u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
-                      <li data-u-target="#carousel-2304" data-u-slide-to="6" class="u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
-                      <li data-u-target="#carousel-2304" data-u-slide-to="7" class="u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
-                    </ol>
-                    <div class="u-carousel-inner u-gallery-inner" role="listbox">
-                      <div class="u-active u-carousel-item u-gallery-item u-carousel-item-1" data-image-width="1500" data-image-height="1923">
-                        <div class="u-back-slide">
-                          <img class="u-back-image u-expanded" src="images/Partridge-After.jpg" alt="After">
-                        </div>
-                        <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-1">
-                          <h3 class="u-gallery-heading" style="font-weight: 400;">After</h3>
-                        </div>
-                        <style data-mode="XL"></style>
-                        <style data-mode="LG"></style>
-                        <style data-mode="MD" data-visited="true"></style>
-                        <style data-mode="SM"></style>
-                        <style data-mode="XS"></style>
-                      </div>
-                      <div class="u-carousel-item u-gallery-item u-carousel-item-2" data-image-width="1500" data-image-height="1923">
-                        <div class="u-back-slide">
-                          <img class="u-back-image u-expanded" src="images/Partridge-Before.jpg" alt="Before">
-                        </div>
-                        <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-2">
-                          <h3 class="u-gallery-heading" style="font-weight: 400;">Before</h3>
-                        </div>
-                        <style data-mode="XL"></style>
-                        <style data-mode="LG"></style>
-                        <style data-mode="MD" data-visited="true"></style>
-                        <style data-mode="SM"></style>
-                        <style data-mode="XS"></style>
-                      </div>
-                      <div class="u-carousel-item u-gallery-item u-carousel-item-3" data-image-width="1500" data-image-height="1994">
-                        <div class="u-back-slide">
-                          <img class="u-back-image u-expanded" src="images/BerwRd-Before.jpg" alt="Before">
-                        </div>
-                        <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-3">
-                          <h3 class="u-gallery-heading" style="font-weight: 400;">Before</h3>
-                        </div>
-                        <style data-mode="XL"></style>
-                        <style data-mode="LG"></style>
-                        <style data-mode="MD" data-visited="true"></style>
-                        <style data-mode="SM"></style>
-                        <style data-mode="XS"></style>
-                      </div>
-                      <div class="u-carousel-item u-gallery-item u-carousel-item-4" data-image-width="1500" data-image-height="1994">
-                        <div class="u-back-slide">
-                          <img class="u-back-image u-expanded" src="images/BerwRd-After.png" alt="After">
-                        </div>
-                        <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-4">
-                          <h3 class="u-gallery-heading" style="font-weight: 400;">After</h3>
-                        </div>
-                        <style data-mode="XL"></style>
-                        <style data-mode="LG"></style>
-                        <style data-mode="MD"></style>
-                        <style data-mode="SM"></style>
-                        <style data-mode="XS"></style>
-                      </div>
-                      <div class="u-carousel-item u-gallery-item u-carousel-item-5" data-image-width="1200" data-image-height="1600">
-                        <div class="u-back-slide">
-                          <img class="u-back-image u-expanded" src="images/IMG-20210903-WA0005.jpg" alt="After">
-                        </div>
-                        <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-5">
-                          <h3 class="u-gallery-heading" style="font-weight: 400;">After</h3>
-                        </div>
-                        <style data-mode="XL"></style>
-                        <style data-mode="LG"></style>
-                        <style data-mode="MD" data-visited="true"></style>
-                        <style data-mode="SM"></style>
-                        <style data-mode="XS"></style>
-                      </div>
-                      <div class="u-carousel-item u-gallery-item u-carousel-item-6" data-image-width="1368" data-image-height="1824">
-                        <div class="u-back-slide">
-                          <img class="u-back-image u-expanded" src="images/IMG-20240118-WA0003.jpg">
-                        </div>
-                        <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-6"></div>
-                        <style data-mode="XL"></style>
-                        <style data-mode="LG"></style>
-                        <style data-mode="MD" data-visited="true"></style>
-                        <style data-mode="SM"></style>
-                        <style data-mode="XS"></style>
-                      </div>
-                      <div class="u-carousel-item u-gallery-item u-carousel-item-7" data-image-width="899" data-image-height="1599">
-                        <div class="u-back-slide">
-                          <img class="u-back-image u-expanded" src="images/IMG-20240117-WA0001.jpg">
-                        </div>
-                        <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-7"></div>
-                        <style data-mode="XL"></style>
-                        <style data-mode="LG"></style>
-                        <style data-mode="MD" data-visited="true"></style>
-                        <style data-mode="SM"></style>
-                        <style data-mode="XS"></style>
-                      </div>
-                      <div class="u-carousel-item u-gallery-item u-carousel-item-8" data-image-width="1200" data-image-height="1600">
-                        <div class="u-back-slide">
-                          <img class="u-back-image u-expanded" src="images/IMG-20210623-WA0005.jpg" alt="Before">
-                        </div>
-                        <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-8">
-                          <h3 class="u-gallery-heading" style="font-weight: 400;">Before</h3>
-                        </div>
-                        <style data-mode="XL"></style>
-                        <style data-mode="LG"></style>
-                        <style data-mode="MD" data-visited="true"></style>
-                        <style data-mode="SM"></style>
-                        <style data-mode="XS"></style>
-                      </div>
-                    </div>
-                    <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-1" href="#carousel-2304" role="button" data-u-slide="prev">
-                      <span aria-hidden="true">
-                        <svg viewBox="0 0 451.847 451.847"><path d="M97.141,225.92c0-8.095,3.091-16.192,9.259-22.366L300.689,9.27c12.359-12.359,32.397-12.359,44.751,0
-c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.354,12.354,32.391,0,44.744
-c-12.354,12.365-32.386,12.365-44.745,0l-194.29-194.281C100.226,242.115,97.141,234.018,97.141,225.92z"></path></svg>
-                      </span>
-                      <span class="sr-only">
-                        <svg viewBox="0 0 451.847 451.847"><path d="M97.141,225.92c0-8.095,3.091-16.192,9.259-22.366L300.689,9.27c12.359-12.359,32.397-12.359,44.751,0
-c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.354,12.354,32.391,0,44.744
-c-12.354,12.365-32.386,12.365-44.745,0l-194.29-194.281C100.226,242.115,97.141,234.018,97.141,225.92z"></path></svg>
-                      </span>
-                    </a>
-                    <a class="u-absolute-vcenter u-carousel-control u-carousel-control-next u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-carousel-control-2" href="#carousel-2304" role="button" data-u-slide="next">
-                      <span aria-hidden="true">
-                        <svg viewBox="0 0 451.846 451.847"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744
-L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284
-c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"></path></svg>
-                      </span>
-                      <span class="sr-only">
-                        <svg viewBox="0 0 451.846 451.847"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744
-L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284
-c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"></path></svg>
-                      </span>
-                    </a>
-                  </div>
-                </div>
+                <div class="u-container-layout u-container-layout-2" src=""></div>
               </div>
             </div>
           </div>
