--- a/EcoShield-Windows.html
+++ b/EcoShield-Windows.html
@@ -217,35 +217,35 @@
             <p class="u-large-text u-text u-text-variant u-text-2"> Combining modern materials and performance with traditional looks, enhance the character of your home with a composite door.</p>
           </div>
         </div>
-        <div class="u-align-center u-carousel-item u-clearfix u-section-3-2" src="">
+        <div class="u-align-center u-carousel-item u-clearfix u-gradient u-section-3-2" src="">
           <div class="u-clearfix u-sheet u-sheet-1">
             <img class="custom-expanded u-image u-image-1" src="images/verticalsliderimage2.png" data-image-width="364" data-image-height="618">
             <h2 class="u-text u-text-default u-text-1">Vertical Sliders</h2>
             <p class="u-large-text u-text u-text-variant u-text-2"> The sliding sash window combines&nbsp;the elegance of traditional sash windows with the benefits of modern materials.</p>
           </div>
         </div>
-        <div class="u-align-center u-carousel-item u-clearfix u-section-3-3" src="">
+        <div class="u-align-center u-carousel-item u-clearfix u-gradient u-section-3-3" src="">
           <div class="u-clearfix u-sheet u-sheet-1">
             <h2 class="u-text u-text-default u-text-1">Casement Windows</h2>
             <img class="custom-expanded u-image u-image-1" src="images/CasementWindow.jpg" data-image-width="810" data-image-height="1126">
             <p class="u-large-text u-text u-text-variant u-text-2"> Designed to achieve a wide range of configurations to suit any property type.</p>
           </div>
         </div>
-        <div class="u-align-center u-carousel-item u-clearfix u-section-3-4" src="">
+        <div class="u-align-center u-carousel-item u-clearfix u-gradient u-section-3-4" src="">
           <div class="u-clearfix u-sheet u-sheet-1">
             <h2 class="u-text u-text-default u-text-1">Bi-Folding​ Doors</h2>
             <img class="custom-expanded u-image u-image-1" src="images/alibi-fold.png" data-image-width="1056" data-image-height="808">
             <p class="u-large-text u-text u-text-variant u-text-2"> High performance,&nbsp;contemporary styles in a variety of opening sequences to suit your needs.</p>
           </div>
         </div>
-        <div class="u-align-center u-carousel-item u-clearfix u-section-3-5" src="">
+        <div class="u-align-center u-carousel-item u-clearfix u-gradient u-section-3-5" src="">
           <div class="u-clearfix u-sheet u-sheet-1">
             <h2 class="u-text u-text-default u-text-1">Flush Sash</h2>
             <img class="custom-expanded u-image u-image-1" src="images/Flushwhiteleft.png" data-image-width="1200" data-image-height="1200">
             <p class="u-large-text u-text u-text-variant u-text-2"> Flush casement&nbsp;brings elegance and quality into every home&nbsp;with a range of colours and options to suit your needs.</p>
           </div>
         </div>
-        <div class="u-align-center u-carousel-item u-clearfix u-section-3-6" src="">
+        <div class="u-align-center u-carousel-item u-clearfix u-gradient u-section-3-6" src="">
           <div class="u-clearfix u-sheet u-sheet-1">
             <h2 class="u-text u-text-default u-text-1">Panel Doors</h2>
             <img class="custom-expanded u-image u-image-1" src="images/paneldoors.png" data-image-width="570" data-image-height="496">
@@ -466,9 +466,9 @@
             <div class="u-layout-row" style="">
               <div class="u-align-center u-container-style u-layout-cell u-left-cell u-size-30 u-size-xs-60 u-white u-layout-cell-1" src="">
                 <div class="u-container-layout u-container-layout-1">
-                  <img class="u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-contain u-image-default u-image-1" src="images/5star.jpg" alt="" data-image-width="960" data-image-height="240">
                   <h2 class="u-text u-text-1">Testimonials<br>
                   </h2>
+                  <img class="u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-contain u-image-default u-image-1" src="images/5star.jpg" alt="" data-image-width="960" data-image-height="240">
                   <p class="u-text u-text-2">
                     <span style="font-weight: 700;">January 2024</span>
                     <br>The new windows and doors has transformed my home, inside and out. No more draghts and my neighbours have all commented on the colour of my new door. Very professional job from start to finish.<br>
@@ -631,13 +631,14 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
     <footer class="u-clearfix u-custom-color-2 u-footer" id="sec-59bd"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-text u-text-default-xs u-text-1">Contact Us<br>
           <br>Address:<br> Unit 16 Parc Busnes&nbsp;<br>Abergorki Ind Est<br>Ynyswen Rd<br>Treorchy<br>CF42 6DL<br>
-          <br>Tel:<br>07525823613<br>078897118484<br>
+          <br>Tel:<br>07525 823 613<br>07897 118 484<br>
+          <br>Email:<br>info@ecoshieldwindows.co.uk
         </p>
         <div class="u-border-1 u-border-white u-expanded-width u-line u-line-horizontal u-opacity u-opacity-50 u-line-1"></div>
         <p class="u-text u-text-default u-text-2">*Free Ring Doorbell Promotion (January - Feburary 2024) - We reserve the right to remove the promotion at any time. Doorbell ​installation not included. For doorbell installation fees, please speak to a member of our team. Doorbell will be transferd to bill payer once all works are completed and all payments have been recieved by us. This promotion carries no cash alternitive.&nbsp;</p>
         <p class="u-align-center u-text u-text-3"> Registered Company England &amp; Wales<br>15433312
         </p>
-        <p class="u-align-center u-text u-text-4">Website ​Designed By - Ecoshiled 2024</p>
+        <p class="u-align-center u-text u-text-4">Website ​Created By - Ecoshiled Windows 2024</p>
       </div></footer><span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; background-image: none; right: 20px; bottom: 20px; padding: 15px" class="u-back-to-top u-icon u-icon-circle u-opacity u-opacity-85 u-palette-1-base" data-href="#">
         <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg>
         <svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg>
